objects/BL_Translation__c.object
<CustomObject>
    <description>Translation Element for each Language</description>
    <label>Translation</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand1</fullName>
                </value>
                <value>
                    <fullName>Brand2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDC</fullName>
                    <label>Digital Card</label>
                </value>
                <value>
                    <fullName>CLT</fullName>
                    <label>Clienteling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>the language to be translated the source text</description>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ar</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Brazilian Portuguese</label>
                </value>
                <value>
                    <fullName>zh_HK</fullName>
                    <label>Chinese (Hong Kong)</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                    <label>Chinese (Traditional)</label>
                </value>
                <value>
                    <fullName>cs</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>nl</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>en</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>en_SG</fullName>
                    <label>English (Singapore)</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English US</label>
                </value>
                <value>
                    <fullName>fr_LU</fullName>
                    <label>Français Luxembourg</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>fr_CH</fullName>
                    <label>French (Switzerland)</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>de_CH</fullName>
                    <label>German (Switzerland)</label>
                </value>
                <value>
                    <fullName>he</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>it_CH</fullName>
                    <label>Italian (Switzerland)</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>my</fullName>
                    <label>Malay</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>sv</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>Th</fullName>
                    <label>Thai</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BL_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <formula>Text( Language__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
</CustomObject>